--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "chatbot",
     "templates"
   ],
-  "author": "",
-  "license": "ISC",
+  "author": "fox.jiang",
+  "license": "Apache-2.0",
   "devDependencies": {
     "babel-jest": "^25.1.0",
     "babel-plugin-rewire": "^1.2.0",
