--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "zoombottemplates",
-  "version": "2.0.0",
-  "description": "templates for chatbot-cli",
+  "name": "@zoomus/zoombottemplates",
+  "version": "2.0.2",
+  "description": "templates for @zoomus/chatbot-cli",
   "main": "index.js",
   "scripts": {
     "test": "jest --config  ./jest.config.js"
@@ -11,7 +11,7 @@
     "chatbot",
     "templates"
   ],
-  "author": "fox.jiang",
+  "author": "zoom",
   "license": "Apache-2.0",
   "devDependencies": {
     "babel-jest": "^25.1.0",
