--- a/resource/general-db-files/package/package.json
+++ b/resource/general-db-files/package/package.json
@@ -11,7 +11,7 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
-		"botdblocal": "^0.1.0",
+		"botdblocal": "^0.1.1",
 		"babel-jest": "^25.1.0",
 		"babel-plugin-rewire": "^1.2.0",
 		"cross-env": "^6.0.3",
@@ -24,8 +24,8 @@
 	},
 	"dependencies": {
 		"moment": "^2.24.0",
-		"botdynamodb": "^0.1.0",
-		"botservice": "^2.0.0",
+		"botdynamodb": "^0.1.1",
+		"@zoomus/botservice": "^0.1.0",
 		"body-parser": "^1.19.0",
 		"compression": "^1.7.4",
 		"cookie-parser": "^1.4.4",
@@ -34,6 +34,8 @@
 		"express": "^4.17.1",
 		"fs-extra": "^8.1.0",
 		"hbs": "^4.1.0",
+		"@hapi/joi": "15.1.1",
+		"dynogels": "9.1.0",
 		"jsonwebtoken": "^8.5.1"
 	}
 }
