--- a/resource/serverless-db-files/package/package.json
+++ b/resource/serverless-db-files/package/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "babel-jest": "^25.1.0",
-    "botdblocal": "^0.1.0",
+    "botdblocal": "^0.1.1",
     "babel-plugin-rewire": "^1.2.0",
 		"cross-env": "^6.0.3",
 		"eslint": "^5.16.0",
@@ -25,7 +25,7 @@
   },
   "dependencies": {
     "dotenv": "^8.2.0",
-    "botservice": "^2.0.0",
+    "@zoomus/botservice": "^0.1.0",
 		"fs-extra": "^8.1.0",
 		"cors": "^2.8.5",
 		"body-parser": "^1.19.0",
@@ -36,6 +36,8 @@
 		"jsonwebtoken": "^8.5.1",
 		"cookie-parser": "^1.4.4",
     "moment": "^2.24.0",
-    "botdynamodb": "^0.1.0"
+    "@hapi/joi": "15.1.1",
+    "dynogels": "9.1.0",
+    "botdynamodb": "^0.1.1"
   }
 }
